# QAlgorithm

./: .travis.yml  CMakeLists.txt  DOXYFILE  LICENSE  README.md  _q_algorithm_8cpp.html  _q_algorithm_8cpp.js  _q_algorithm_8cpp_source.html  _q_algorithm_8h.html  _q_algorithm_8h.js  _q_algorithm_8h_source.html  annotated.html  annotated.js  class_q_algorithm-members.html  class_q_algorithm.html  class_q_algorithm.js  classes.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  dir_937900b87e0c7a5fa01190c395fb83f7.js  doxygen.css  files.html  functions.html  functions_func.html  functions_prop.html  generateDocumentationAndDeploy.sh  globals.html  globals_defs.html  globals_func.html  globals_type.html  hierarchy.html  hierarchy.js  index.html  navtree.css  navtree.js  navtreeindex0.js  qa__macros_8h.html  qa__macros_8h.js  qa__macros_8h_source.html  tabs.css
Examples/percentile/: CMakeLists.txt  main.cpp
Sources/: QAlgorithm.cpp  QAlgorithm.h  qa_macros.h
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  properties_0.js  properties_2.js  properties_3.js  properties_4.js  properties_5.js  properties_6.js  search.css  search.js  typedefs_0.js
